--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -18,8 +18,8 @@
         <% @products.each do |product| %>
           <tr>
               <td><%= link_to product.name, product_path(product) %> </td>
-              <td>$<%=product.price.round(2) %></td>
-              <td>PUT COMPANY I BELONG TO HERE</td>
+              <td>$<%= product.price.round(2) %></td>
+              <td><%= product.company.name if product.company %></td>
               <td><%= link_to "Review Product", new_product_product_review_path(product) %></td>
          </tr>
             <% end %>
